objects/Lease_2_1_PO_Creation__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting to used in Quote Trigger: CreatePurchaseOrderandPurchaseOrderLine, to be used to get the PriceList</description>
    <fields>
        <fullName>Amendment_Id__c</fullName>
        <label>Amendment Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Counter_Signature_Id__c</fullName>
        <label>Contact Counter Signature Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Counter_Signature__c</fullName>
        <label>Contact Counter Signature</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Draft_Lease_Contract_Id__c</fullName>
        <label>Draft Lease Contract Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantee_Number__c</fullName>
        <label>Guarantee Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_2_1_Bypass_POPOLTrig__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lease_2_1_Bypass_POPOLTrig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_2_1_Test_Method_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Flag to stop other Team&apos;s (except Birlasoft) code from being fired. To overcome testMethod Too Many SOQL Query issue.</inlineHelpText>
        <label>Lease_2_1_Test_Method_Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease_Contract_Id__c</fullName>
        <label>Lease Contract Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Installation_Percentage__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Lease Installation Percentage</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_InterConnect_Percentage__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Lease InterConnect Percentage</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Origination_Percentage__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Lease Origination Percentage</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lien_Waiver_Id__c</fullName>
        <label>Lien Waiver Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Id__c</fullName>
        <label>Partner Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_List_Name__c</fullName>
        <description>name of the Price List to be considered for PO and POL Creation</description>
        <label>Price List Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Safe_Harbour_Calculation__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Safe Harbour Calculation</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Termination_Id__c</fullName>
        <label>Termination Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Lease 2.1 PO Creation</label>
</CustomObject>